# iCubExperiments

./: CMakeLists.txt  README.md  index.html  params.json
ArmsControl/: CMakeLists.txt  armsControl.cpp
ArmsControl/armsControlTest.build/Debug/ALL_BUILD.build/: Script-40AE60DAAB15404C992B7D33.sh  dgph
ArmsControl/armsControlTest.build/Debug/ZERO_CHECK.build/: Script-4A192BC9328740EFB90387B0.sh  dgph
ArmsControl/armsControlTest.build/Debug/armsControl.build/: dgph
ArmsControl/armsControlTest.xcodeproj/: project.pbxproj
ArmsControl/armsControlTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ArmsControl/armsControlTest.xcodeproj/project.xcworkspace/xcshareddata/: armsControlTest.xccheckout
ArmsControl/armsControlTest.xcodeproj/project.xcworkspace/xcuserdata/Semih.xcuserdatad/: UserInterfaceState.xcuserstate
ArmsControl/armsControlTest.xcodeproj/xcuserdata/Semih.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  armsControl.xcscheme  xcschememanagement.plist
Hello_iCub/: CMakeLists.txt  main.cpp
Hello_iCub/helloWorld.build/Debug/ALL_BUILD.build/: Script-2156B06B1B58451D931CD1E7.sh  dgph
Hello_iCub/helloWorld.build/Debug/ZERO_CHECK.build/: Script-42C88923EEDE41E0B066310C.sh  dgph
Hello_iCub/helloWorld.build/Debug/helloWorld.build/: dgph
Hello_iCub/helloWorld.xcodeproj/: project.pbxproj
Hello_iCub/helloWorld.xcodeproj/project.xcworkspace/xcshareddata/: helloWorld.xccheckout
Hello_iCub/helloWorld.xcodeproj/project.xcworkspace/xcuserdata/Semih.xcuserdatad/: UserInterfaceState.xcuserstate
Hello_iCub/helloWorld.xcodeproj/xcuserdata/Semih.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  helloWorld.xcscheme  xcschememanagement.plist
actionPrimitives_Example/: CMakeLists.txt  main.cpp
actionPrimitives_Example/actionPrims.build/Debug/ALL_BUILD.build/: Script-5E66291A78FF4C86ADCF7638.sh  dgph
actionPrimitives_Example/actionPrims.build/Debug/ZERO_CHECK.build/: Script-26DB63DBF9BA46D08AB6F193.sh  dgph
actionPrimitives_Example/actionPrims.build/Debug/actionPrims.build/: dgph
actionPrimitives_Example/actionPrims.xcodeproj/: project.pbxproj
actionPrimitives_Example/actionPrims.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
actionPrimitives_Example/actionPrims.xcodeproj/project.xcworkspace/xcshareddata/: actionPrims.xccheckout
actionPrimitives_Example/actionPrims.xcodeproj/project.xcworkspace/xcuserdata/Semih.xcuserdatad/: UserInterfaceState.xcuserstate
getSound/: CMakeLists.txt  main.cpp
iSpeak-Turkish/: CMakeLists.txt  iCubTestReport.xml  main.cpp  speak.cpp  speechRecog.cpp  speechRecog.h
iSpeak-Turkish/iSpeak_module.build/Debug/ALL_BUILD.build/: Script-22213CC0ABCA47AEBED70418.sh  dgph
iSpeak-Turkish/iSpeak_module.build/Debug/ZERO_CHECK.build/: Script-AE2A1F6BF5C0471EBBD57BCE.sh  dgph
iSpeak-Turkish/iSpeak_module.build/Debug/iSpeak_module.build/: dgph
iSpeak-Turkish/iSpeak_module.xcodeproj/: project.pbxproj
iSpeak-Turkish/iSpeak_module.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iSpeak-Turkish/iSpeak_module.xcodeproj/project.xcworkspace/xcshareddata/: iSpeak_module.xccheckout
imagePickUp/: CMakeLists.txt  main.cpp
imagePickUp/imagePickUp.build/Debug/ALL_BUILD.build/: Script-F3C81CF5A104498D855C6BD0.sh  dgph
imagePickUp/imagePickUp.build/Debug/ZERO_CHECK.build/: Script-8FF95AF39376443F9228580A.sh  dgph
imagePickUp/imagePickUp.build/Debug/imagePickUp.build/: dgph
imagePickUp/imagePickUp.xcodeproj/: project.pbxproj
imagePickUp/imagePickUp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
imagePickUp/imagePickUp.xcodeproj/project.xcworkspace/xcshareddata/: imagePickUp.xccheckout
objectMover/: objectMover.cpp  objectMoverART.cpp
soundTest/sender/: CMakeLists.txt  soundSend.cpp
(+21 files in other folders)
