cmake_minimum_required(VERSION 3.1)
PROJECT(helloWorld)
FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS})
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")      
ADD_EXECUTABLE(helloWorld main.cpp)
TARGET_LINK_LIBRARIES(helloWorld ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
