cmake_minimum_required(VERSION 3.1)
PROJECT(getSound)
FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS})
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")      
ADD_EXECUTABLE(getSound main.cpp)
TARGET_LINK_LIBRARIES(getSound ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
